assets/css/style.css
/* ... */
.hero::before {
  content:'';
  width:100%;
  position:absolute;
  height:100%;
  background:rgba(2,2,2,.3);
}

.hero .hero_content {
  position:relative;
  z-index:99;
  padding:170px 0;
  background:transparent;
  border-radius:0;
}
.hero .hero_content h1, .hero .hero_content p {
  color:#fff;
}
/* iphone 8+ landscape */
@media (min-width:736px) and (max-height:500px){
  .hero .hero_content {
      padding:50px 0;
      margin-top: 10px;
  }

 .intro, .intro2 {
  margin-top:-5%;
 }

 .card-body1 {
  height: 380px !important;
}

.card-body2 {
  height: 300px !important;
}

.navbar {
  margin-top: -15px;
}

.navbar-nav {
  margin-top: -15px;
}

.slider-image {
  height: 160px !important; 
  margin: 0 0px !important;
}

.slider-image1 {
  height: 150px !important;
  margin: 0 0px !important;
}

}

/* iphone x later horizontal */
@media (min-width:738px) and (max-height:500px){
  .hero .hero_content {
      padding:15px 0;
      margin-top: 20px;
 }
 .navbar {
   margin-top: -15px;
 }

 .nav-link {
   margin-top: -6px;
 }

 .hello {
   font-size: 2rem;

 }
 .half-panel {
  width: 100%;
  height: 90%;
  margin-top: 40px;
  position: relative;
  padding-bottom: 60px;
  left: 5%;
}

.custom-control{
  margin-top: 8px;
}

.blank-space{
  visibility: visible;
}

.display-4 {
  font-size: 3rem !important;
}

h4 {
  font-size: 1.5rem !important;
}

h5 {
  line-height: 2.2rem !important;
}

.slider-image {
  height: 200px !important; 
  margin: 0 0px !important;
  padding: 20px !important;
}

.slider-image1 {
  height: 170px !important;
  margin: 0 0px !important;
  padding: 20px !important;
}

}

/*end hero*/

#about, #services, #portfolio, #testimonials, #contact {
  overflow-x: hidden;
  width: 100%;
}

h1 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1rem;
}

.card {
  background-color: var(--card-color);
}

h5, .card-body {
  color: var(--card-font-color) !important;
}

/* Most Mobile Devices iphones */
@media (max-width:737px ) {
  .navbar {
    margin-top: 2rem !important;
  }
  .half-panel {
    width: 60%;
    height: 90%;
    margin-top: 40px;
    position: relative;
    left: 20%;
  }
  .nav-link {
    font-size: 1.75rem;
  }

  .custom-switch {
    transform: scale(1.6,1.6);
    margin-left: -50px;
    padding-top: 10px;
  }

  .blank-space {
    padding: 7px;
    visibility: visible;
  }

  /* .navbar {
    max-height: 80px;
  } */

  .hello {
    margin-top: 30px;
  }

  .learn-more {
    margin-top: 80px;
  }

  .testimonial1 .testi1 h5 {
    line-height: 30px;
    font-size: 1.1rem;
  }

  h4 {
    font-size: 1.3rem;
  }

  .card-body {
    height: 375px;
  }

  .card-body1 {
    height: 460px;
  }

 
}

.scrolled-down{
  transform:translateY(-100%); transition: all .3s ease-in-out !important;
  
  }
.scrolled-up{
  transform:translateY(0); transition: all .3s .3s ease-in-out !important;
  }

.navbar {
  z-index: 999;
  margin-top: -1px;
}

.navbar-blur-dark {
  z-index: 999;
  -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  background:rgba(0,0,0,0.5);
}

.navbar-blur {
  z-index: 999;
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
}

.navbar-nav {
  align-items: center;
}

.navbar .nav-link:hover,
.navbar .nav-link:focus, 
 {
  color: var(--primary-color);
  text-decoration: none;
}

.navbar-brand {
  color: #fff;
}

/* .mobile-navbar-dropdown {
  max-height: 100%;
  margin-top: -14px;
}

.mobile-navbar-collapsed {
  max-height: 75px;
  margin-top: -14px;
} */


/* Change navbar styling on scroll Large Devices */
@media (min-width: 980px) and (max-width:1199px) {

  .half-panel {
    width: 100%;
    height: 80%;
    margin-top: 40px;
    position: relative;
  }
  h5 {
    line-height: 1rem;
  }

  .card-body {
    height: 50vw;
  }
}

@media (max-width: 415px){
  .half-panel {
    width: 90%;
    height: 100%;
    margin-top: 40px;
    position: relative;
    padding-bottom: 60px;
    left: 5%;
  }
  .btn {
    transform: scale(1.2,1.2);
  }
}

/* iPhones horizontal */
@media (max-height: 415px) {
  .display-4 {
    font-size: 2rem;
  }
  .lead {
    font-size: 1.25rem;
  }
  .nav-link {
    font-size: 1.5rem;
  }
  .custom-control {
    transform: scale(1.4,1.4);
    margin-right: 20px;
  }
  .fade-in-delay3 {
    margin-top: -8px !important;
  }
  .hello {
    margin-top: 16%;
  }
}

/* ipads */
@media (min-width: 750px) and (min-height: 767px) {
  .half-panel {
    width: 500px;
    height: 100%;
    margin-top: 40px;
    position: relative;
    padding-bottom: 60px;
    left: 13%;
  }
  .nav-link {
    font-size: 2rem;
  }
  .custom-control {
    transform: scale(1.8,1.8);
    padding-top: 8px;
    margin-left: -50px;
  }

  .hello {
    margin-top: 80px;
  }

  .lead {
    font-size: 1.75rem;
  }

  .learn-more {
    margin-top: 80px;
  }

  .btn {
    transform: scale(1.4,1.4);
  }
  .content {
    font-size: 1.5rem;
  }

  .display-4 {
    font-size: 4rem;
  }

  h4 {
    font-size: 2rem;
  }

  .list-items {
    font-size: 1.3rem;
  }

  .testimonial1 .testi1 h5 {
    line-height: 35px;
    font-size: 1.5rem;
  }

}
@media (max-width: 992px) {
  .custom-control{
    padding-bottom: 15px;
  }

}

@media (min-width: 1200px){
  .half-panel {
    max-width: 100%;
    height: 80%;
    margin-top: 40px;
    position: relative;
    padding-bottom: 60px;
    left: 5%;
  }
  .blank-space {
    visibility: hidden;
  }
  .navbar {
    max-height: 60px;
  }
  .nav-link {
    font-size: 1.25rem;
  }
  .custom-switch {
    transform: scale(1.2,1.2);
    margin-left: 25px;

  }

  .hello {
    margin-top: 50px;
    font-size: 3rem;
  }

  .lead {
    font-size: 1.8rem;
  }

  .btn {
    transform: scale(1,1);
  }

  #about{
    /* padding-top: 50px; */
    align-items: center;
  }

  .content{
    max-width: 100%;
  }

  h5 {
    line-height: 2.2rem !important;
  }

  .card-body {
    height: 34vw;
  }

}
/* ... */

